--- a/ap1.html
+++ b/ap1.html
@@ -14,7 +14,7 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
-<body data-pasta="assets/img/dna" data-prefixo="dna" data-total="10">
+<body data-pasta="assets/img/dna" data-prefixo="dna" data-total="17">
   <div id="header"></div>
 
   <section class="hero">
@@ -35,6 +35,39 @@
     </div>
   </section>
 
+<section class="details">
+  <div class="container">
+    <h2>Sobre o apartamento</h2>
+    
+    <p><strong>Condomínio Reserva DNA</strong> – Frente ao mar na Praia Grande, com infraestrutura de alto padrão:</p>
+    <ul>
+      <li>3 saunas, 2 jacuzzis, 2 academias</li>
+      <li>Cinema, brinquedoteca, salão de jogos</li>
+      <li>Piscinas climatizadas e trilha na cobertura</li>
+      <li>Vista para a Mata Atlântica e área verde</li>
+    </ul>
+
+    <p><strong>Apartamento 13.1.4</strong> – Climatizado, espaçoso e ideal para até 6 hóspedes:</p>
+    <ul>
+      <li>2 suítes (1 cama de casal + auxiliar / 3 camas de solteiro + auxiliares)</li>
+      <li>Sala com sofá-cama e TV</li>
+      <li>Cozinha completa planejada</li>
+      <li>Sacada gourmet com churrasqueira e vista para o jardim</li>
+    </ul>
+
+    <p><strong>Informações adicionais:</strong></p>
+    <ul>
+      <li>2 vagas de garagem coberta</li>
+      <li>Pets de pequeno porte são permitidos</li>
+      <li>Acesso total à área de lazer do condomínio</li>
+      <li>Check-in: após 13h | Check-out: até 9h</li>
+      <li>Levar roupa de cama e banho</li>
+      <li>1º andar com elevador</li>
+    </ul>
+  </div>
+</section>
+
+
   <section class="gallery">
     <div class="container">
       <h2>Galeria de Fotos</h2>
@@ -42,18 +75,6 @@
     </div>
   </section>
 
-  <section class="details">
-    <div class="container">
-      <h2>Sobre o apartamento</h2>
-      <ul>
-        <li>Frente ao mar</li>
-        <li>2 quartos (1 suíte)</li>
-        <li>Até 6 pessoas</li>
-        <li>Wi-Fi, TV, ar-condicionado</li>
-        <li>Piscina, churrasqueira</li>
-      </ul>
-    </div>
-  </section>
 
   <section class="map">
     <div class="container">
@@ -104,7 +125,7 @@
   <div class="img-modal" id="imgModal">
     <div class="img-modal-content">
       <button class="close-modal" id="closeModal">&times;</button>
-      <img id="modalImage" src="" alt="Imagem ampliada" />
+      <img id="modalImage" src="about:blank" alt="Imagem ampliada" />
     </div>
   </div>
 </body>
