fix: keep WhatsApp button visible

--- a/ap1.html
+++ b/ap1.html
@@ -89,7 +89,7 @@
     <div class="container">
       <a href="https://wa.me/5519997341037?text=Olá! Tenho interesse no apartamento frente ao mar. Ele está disponível para as datas [xx/xx - xx/xx]?"
          target="_blank"
-         class="whatsapp-btn">
+         class="whatsapp-btn whatsapp-fixed">
         Reservar pelo WhatsApp
       </a>
     </div>
