--- a/ap1.html
+++ b/ap1.html
@@ -85,7 +85,7 @@
       <a href="https://wa.me/5519997341037?text=Olá! Tenho interesse no apartamento frente ao mar. Ele está disponível para as datas [xx/xx - xx/xx]?"
          target="_blank"
          class="whatsapp-btn whatsapp-fixed">
-        Reservar pelo WhatsApp
+        Quero reservar agora!
       </a>
     </div>
   </section>
