--- a/ap1.html
+++ b/ap1.html
@@ -82,7 +82,7 @@
 
   <section class="contact">
     <div class="container">
-      <a href="https://wa.me/5519997341037?text=Olá! Tenho interesse no apartamento frente ao mar. Ele está disponível para as datas [xx/xx - xx/xx]?"
+      <a href="https://wa.me/5519997341037?text=Olá! Vi o apartamento de frente ao mar no Reserva DNA e gostaria de saber se ele está disponível para as datas [xx/xx - xx/xx]. Pode me passar mais informações?"
          target="_blank"
          class="whatsapp-btn whatsapp-fixed">
         Quero reservar agora!
