--- a/ap2.html
+++ b/ap2.html
@@ -89,7 +89,7 @@
 
   <section class="contact">
     <div class="container">
-      <a href="https://wa.me/5519997341037?text=Olá! Tenho interesse no apartamento frente ao mar. Ele está disponível para as datas [xx/xx - xx/xx]?"
+      <a href="https://wa.me/5519997341037?text=Oi! Gostei do apartamento no Grand Beach com vista para a mata e sacada gourmet. Ele está disponível nas datas [xx/xx - xx/xx]?"
          target="_blank"
          class="whatsapp-btn whatsapp-fixed">
         Quero reservar agora!
