--- a/ap3.html
+++ b/ap3.html
@@ -88,7 +88,7 @@
 
   <section class="contact">
     <div class="container">
-      <a href="https://wa.me/5519997341037?text=Olá! Tenho interesse no apartamento frente ao mar. Ele está disponível para as datas [xx/xx - xx/xx]?"
+      <a href="https://wa.me/5519997341037?text=Olá! Tenho interesse no apartamento com vista para a piscina no Grand Beach. Ele está disponível entre [xx/xx - xx/xx]? Pode me enviar as informações?"
          target="_blank"
          class="whatsapp-btn whatsapp-fixed">
         Quero reservar agora!
