Add scroll animations and responsive enhancements

--- a/ap3.html
+++ b/ap3.html
@@ -17,14 +17,14 @@
 <body data-pasta="assets/img/gbpis" data-prefixo="gbpis" data-total="10">
   <div id="header"></div>
 
-  <section class="hero">
+  <section class="hero scroll-animate">
     <div class="container">
       <h1>Grand Beach</h1>
       <p>Vista Piscina • Ubatuba - SP</p>
     </div>
   </section>
 
-  <section class="carousel">
+  <section class="carousel scroll-animate">
     <div class="container">
       <div class="swiper">
         <div class="swiper-wrapper" id="carouselContainer"></div>
@@ -35,7 +35,7 @@
     </div>
   </section>
 
-<section class="details">
+<section class="details scroll-animate">
   <div class="container">
     <h2>Sobre o apartamento</h2>
     
@@ -71,7 +71,7 @@
 </section>
 
 
-  <section class="gallery">
+  <section class="gallery scroll-animate">
     <div class="container">
       <h2>Galeria de Fotos</h2>
       <div class="mosaic-grid" id="galleryContainer"></div>
@@ -79,14 +79,14 @@
   </section>
 
 
-  <section class="map">
+  <section class="map scroll-animate">
     <div class="container">
       <h2>Localização</h2>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d449.06098195387784!2d-45.06935289752858!3d-23.472434602076692!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cd53e48ffe8bf1%3A0x1fb1de5d5529b4b!2sCondom%C3%ADnio%20Grand%20Beach!5e0!3m2!1spt-BR!2sbr!4v1750013380063!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
   </section>
 
-  <section class="contact">
+  <section class="contact scroll-animate">
     <div class="container">
       <a href="https://wa.me/5519997341037?text=Olá! Tenho interesse no apartamento com vista para a piscina no Grand Beach. Ele está disponível entre [xx/xx - xx/xx]? Pode me enviar as informações?"
          target="_blank"
