--- a/ap1.html
+++ b/ap1.html
@@ -17,14 +17,14 @@
 <body data-pasta="assets/img/dna" data-prefixo="dna" data-total="17">
   <div id="header"></div>
 
-  <section class="hero">
+  <section class="hero scroll-animate">
     <div class="container">
       <h1>Reserva DNA</h1>
       <p>Frente ao mar • Ubatuba - SP</p>
     </div>
   </section>
 
-  <section class="carousel">
+  <section class="carousel scroll-animate">
     <div class="container">
       <div class="swiper">
         <div class="swiper-wrapper" id="carouselContainer"></div>
@@ -35,7 +35,7 @@
     </div>
   </section>
 
-<section class="details">
+<section class="details scroll-animate">
   <div class="container">
     <h2>Sobre o apartamento</h2>
     
@@ -66,7 +66,7 @@
 </section>
 
 
-  <section class="gallery">
+  <section class="gallery scroll-animate">
     <div class="container">
       <h2>Galeria de Fotos</h2>
       <div class="mosaic-grid" id="galleryContainer"></div>
@@ -74,13 +74,13 @@
   </section>
 
 
-  <section class="map">
+  <section class="map scroll-animate">
     <div class="container">
       <h2>Localização</h2>
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1581.1991862788047!2d-45.068786620037855!3d-23.472606205201323!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cd53fb3416497f%3A0x9087ddb800ce647!2sReserva%20DNA!5e0!3m2!1spt-BR!2sbr!4v1750010793129!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>    </div>
   </section>
 
-  <section class="contact">
+  <section class="contact scroll-animate">
     <div class="container">
       <a href="https://wa.me/5519997341037?text=Olá! Vi o apartamento de frente ao mar no Reserva DNA e gostaria de saber se ele está disponível para as datas [xx/xx - xx/xx]. Pode me passar mais informações?"
          target="_blank"
