Melhora layout da seção Sobre o apartamento

--- a/ap1.html
+++ b/ap1.html
@@ -38,30 +38,46 @@
 <section class="details scroll-animate">
   <div class="container">
     <h2>Sobre o apartamento</h2>
-    
-    <p><strong>Condomínio Reserva DNA</strong> – Frente ao mar na Praia Grande, com infraestrutura de alto padrão:</p>
-    <ul>
-      <li>3 saunas, 2 jacuzzis, 2 academias</li>
-      <li>Cinema, brinquedoteca, salão de jogos</li>
-      <li>Piscinas climatizadas e trilha na cobertura</li>
-    </ul>
+    <div class="quick-summary">
+      <ul class="summary-list">
+        <li>Frente ao mar 🏖️</li>
+        <li>Sacada gourmet 🍖</li>
+        <li>2 suítes 👨‍👩‍👧‍👦</li>
+        <li>Piscina, cinema e lazer completo 🎬</li>
+      </ul>
+    </div>
 
-    <p><strong>Apartamento 13.1.4</strong> – Climatizado, espaçoso e ideal para até 6 hóspedes:</p>
-    <ul>
-      <li>2 suítes (1 cama de casal + auxiliar / 3 camas de solteiro + auxiliares)</li>
-      <li>Sala com sofá-cama e TV</li>
-      <li>Cozinha completa planejada</li>
-      <li>Sacada gourmet com churrasqueira e vista para o jardim</li>
-    </ul>
+    <div class="details-grid">
+      <div class="details-block">
+        <h3>Estrutura do condomínio</h3>
+        <ul class="condo-list">
+          <li>3 saunas, 2 jacuzzis, 2 academias</li>
+          <li>Cinema, brinquedoteca, salão de jogos</li>
+          <li>Piscinas climatizadas e trilha na cobertura</li>
+        </ul>
+      </div>
+      <div class="details-block">
+        <h3>Detalhes do apartamento</h3>
+        <ul class="apartment-list">
+          <li>2 suítes (1 cama de casal + auxiliar / 3 camas de solteiro + auxiliares)</li>
+          <li>Sala com sofá-cama e TV</li>
+          <li>Cozinha completa planejada</li>
+          <li>Sacada gourmet com churrasqueira e vista para o jardim</li>
+        </ul>
+      </div>
+      <div class="details-block">
+        <h3>Informações adicionais</h3>
+        <ul class="info-list">
+          <li>2 vagas de garagem coberta</li>
+          <li>Pets de pequeno porte são permitidos</li>
+          <li>Acesso total à área de lazer do condomínio</li>
+          <li>Check-in: após 13h | Check-out: até 9h</li>
+          <li>1º andar com elevador</li>
+        </ul>
+      </div>
+    </div>
 
-    <p><strong>Informações adicionais:</strong></p>
-    <ul>
-      <li>2 vagas de garagem coberta</li>
-      <li>Pets de pequeno porte são permitidos</li>
-      <li>Acesso total à área de lazer do condomínio</li>
-      <li>Check-in: após 13h | Check-out: até 9h</li>
-      <li>1º andar com elevador</li>
-    </ul>
+    <a href="https://wa.me/5519997341037?text=Ol%C3%A1%21%20Vi%20o%20apartamento%20de%20frente%20ao%20mar%20no%20Reserva%20DNA%20e%20gostaria%20de%20saber%20se%20ele%20est%C3%A1%20dispon%C3%ADvel%20para%20as%20datas%20%5Bxx/xx%20-%20xx/xx%5D.%20Pode%20me%20passar%20mais%20informa%C3%A7%C3%B5es%3F" class="whatsapp-btn section-whatsapp" target="_blank">Reservar pelo WhatsApp</a>
   </div>
 </section>
 
