--- a/ap2.html
+++ b/ap2.html
@@ -38,36 +38,47 @@
 <section class="details scroll-animate">
   <div class="container">
     <h2>Sobre o apartamento</h2>
-    
-    <p><strong>Localização privilegiada</strong> – A apenas 100 metros da Praia Grande, com vista para a Mata Atlântica:</p>
-    <ul>
-      <li>Sacada gourmet com churrasqueira, fechada em blindex</li>
-      <li>Som do canto dos pássaros e muito contato com a natureza</li>
-    </ul>
+    <div class="quick-summary">
+      <ul class="summary-list">
+        <li>100m da praia 🏖️</li>
+        <li>Sacada gourmet 🍖</li>
+        <li>Até 8 pessoas 👨‍👩‍👧‍👦</li>
+        <li>Piscina e natureza ao redor 🌴</li>
+      </ul>
+    </div>
 
-    <p><strong>Apartamento espaçoso e climatizado</strong> – Ideal para até 8 hóspedes:</p>
-    <ul>
-      <li>2 dormitórios: 1 cama de casal + auxiliar / 2 camas de solteiro + 3 colchões extras</li>
-      <li>Sala com sofá-cama e TV</li>
-      <li>Cozinha planejada completa</li>
-      <li>Sala de jantar com mesa ampla</li>
-    </ul>
-
-    <p><strong>Estrutura do condomínio:</strong></p>
-    <ul>
-      <li>Piscina adulto e infantil</li>
-      <li>Salão de jogos</li>
-      <li>Natureza preservada ao fundo</li>
-    </ul>
-
-    <p><strong>Informações úteis:</strong></p>
-    <ul>
-      <li>2º andar com elevador e escadas</li>
-      <li>1 vaga coberta na garagem</li>
-      <li>Não são permitidos pets</li>
-    </ul>
+    <div class="details-grid">
+      <div class="details-block">
+        <h3>Estrutura do condomínio</h3>
+        <ul class="condo-list">
+          <li>Piscina adulto e infantil</li>
+          <li>Salão de jogos</li>
+          <li>Natureza preservada ao fundo</li>
+        </ul>
+      </div>
+      <div class="details-block">
+        <h3>Detalhes do apartamento</h3>
+        <ul class="apartment-list">
+          <li>2 dormitórios: 1 cama de casal + auxiliar / 2 camas de solteiro + 3 colchões extras</li>
+          <li>Sala com sofá-cama e TV</li>
+          <li>Cozinha planejada completa</li>
+          <li>Sala de jantar com mesa ampla</li>
+          <li>Sacada gourmet com churrasqueira, fechada em blindex</li>
+          <li>Som do canto dos pássaros e muito contato com a natureza</li>
+        </ul>
+      </div>
+      <div class="details-block">
+        <h3>Informações úteis</h3>
+        <ul class="info-list">
+          <li>2º andar com elevador e escadas</li>
+          <li>1 vaga coberta na garagem</li>
+          <li>Não são permitidos pets</li>
+        </ul>
+      </div>
+    </div>
 
     <p><em>* Possuímos mais um apartamento no mesmo prédio para grupos maiores.</em></p>
+    <a href="https://wa.me/5519997341037" class="whatsapp-btn section-whatsapp" target="_blank">Reservar pelo WhatsApp</a>
   </div>
 </section>
 
