--- a/ap3.html
+++ b/ap3.html
@@ -38,35 +38,46 @@
 <section class="details scroll-animate">
   <div class="container">
     <h2>Sobre o apartamento</h2>
-    
-    <p><strong>Localização privilegiada</strong> – A apenas 50 metros da Praia Grande, com vista direta para a piscina:</p>
-    <ul>
-      <li>Sacada gourmet com churrasqueira, rede de proteção e ambiente tranquilo</li>
-      <li>Contato com a natureza e canto dos pássaros</li>
-    </ul>
+    <div class="quick-summary">
+      <ul class="summary-list">
+        <li>50m da praia 🏖️</li>
+        <li>Vista para a piscina 🏊</li>
+        <li>Até 8 pessoas 👨‍👩‍👧‍👦</li>
+        <li>Sacada gourmet 🍖</li>
+      </ul>
+    </div>
 
-    <p><strong>Apartamento amplo e climatizado</strong> – Ideal para até 8 hóspedes:</p>
-    <ul>
-      <li>2 dormitórios: 1 cama de casal + 2 colchões / 2 camas de solteiro + 2 colchões</li>
-      <li>Sala de jantar e sala de estar</li>
-      <li>Cozinha planejada e equipada</li>
-    </ul>
-
-    <p><strong>Estrutura do condomínio:</strong></p>
-    <ul>
-      <li>Piscina adulto e infantil</li>
-      <li>Salão de jogos</li>
-      <li>Área verde preservada</li>
-    </ul>
-
-    <p><strong>Informações úteis:</strong></p>
-    <ul>
-      <li>2º andar com elevador e escadas</li>
-      <li>1 vaga coberta na garagem</li>
-      <li>Não são permitidos pets</li>
-    </ul>
+    <div class="details-grid">
+      <div class="details-block">
+        <h3>Estrutura do condomínio</h3>
+        <ul class="condo-list">
+          <li>Piscina adulto e infantil</li>
+          <li>Salão de jogos</li>
+          <li>Área verde preservada</li>
+        </ul>
+      </div>
+      <div class="details-block">
+        <h3>Detalhes do apartamento</h3>
+        <ul class="apartment-list">
+          <li>2 dormitórios: 1 cama de casal + 2 colchões / 2 camas de solteiro + 2 colchões</li>
+          <li>Sala de jantar e sala de estar</li>
+          <li>Cozinha planejada e equipada</li>
+          <li>Sacada gourmet com churrasqueira, rede de proteção e ambiente tranquilo</li>
+          <li>Contato com a natureza e canto dos pássaros</li>
+        </ul>
+      </div>
+      <div class="details-block">
+        <h3>Informações úteis</h3>
+        <ul class="info-list">
+          <li>2º andar com elevador e escadas</li>
+          <li>1 vaga coberta na garagem</li>
+          <li>Não são permitidos pets</li>
+        </ul>
+      </div>
+    </div>
 
     <p><em>* Possuímos mais um apartamento no mesmo prédio para grupos maiores.</em></p>
+    <a href="https://wa.me/5519997341037" class="whatsapp-btn section-whatsapp" target="_blank">Reservar pelo WhatsApp</a>
   </div>
 </section>
 
