ajustado secao sobre e css

--- a/ap1.html
+++ b/ap1.html
@@ -37,45 +37,35 @@
 
 <section class="details scroll-animate">
   <div class="container">
-    <h2>Sobre o apartamento</h2>
-    <div class="quick-summary">
-      <ul class="summary-list">
-        <li>Frente ao mar 🏖️</li>
-        <li>Sacada gourmet 🍖</li>
-        <li>2 suítes 👨‍👩‍👧‍👦</li>
-        <li>Piscina, cinema e lazer completo 🎬</li>
-      </ul>
-    </div>
+    <div class="badge-block">
+      <h3>🏠 Sobre o apartamento</h3>
+      <div class="badges">
+        <span class="badge">2 suítes espaçosas 🛏️</span>
+        <span class="badge">Cozinha completa 🍽️</span>
+        <span class="badge">Sacada gourmet com vista 🌿</span>
+        <span class="badge">2 vagas cobertas 🚗</span>
+        <span class="badge">Até 6 pessoas 👨‍👩‍👧</span>
+        </div class="badges">
+          <span class="badge destaque">Ideal para famílias ☀️</span>
+        </div>
+      </div>
+    <div class="badge-block">
+      <h3>🏢 Sobre o condomínio</h3>
+      <div class="badges">
+        <span class="badge">Piscina, sauna e deck panorâmico 🏊‍♂️</span>
+        <span class="badge">Academia, cinema e jogos 🎮</span>
+        <span class="badge">Espaço infantil 🧸</span>
+        <span class="badge">Boulevard com comércio ☕</span>
+        </div class="badges">
+          <span class="badge destaque">Mais de 7 mil m² de natureza 🌴</span>
+        </div>
+      </div>
 
-    <div class="details-grid">
-      <div class="details-block">
-        <h3>Estrutura do condomínio</h3>
-        <ul class="condo-list">
-          <li>3 saunas, 2 jacuzzis, 2 academias</li>
-          <li>Cinema, brinquedoteca, salão de jogos</li>
-          <li>Piscinas climatizadas e trilha na cobertura</li>
-        </ul>
-      </div>
-      <div class="details-block">
-        <h3>Detalhes do apartamento</h3>
-        <ul class="apartment-list">
-          <li>2 suítes (1 cama de casal + auxiliar / 3 camas de solteiro + auxiliares)</li>
-          <li>Sala com sofá-cama e TV</li>
-          <li>Cozinha completa planejada</li>
-          <li>Sacada gourmet com churrasqueira e vista para o jardim</li>
-        </ul>
-      </div>
-      <div class="details-block">
-        <h3>Informações adicionais</h3>
-        <ul class="info-list">
-          <li>2 vagas de garagem coberta</li>
-          <li>Pets de pequeno porte são permitidos</li>
-          <li>Acesso total à área de lazer do condomínio</li>
-        </ul>
-      </div>
-    </div>
   </div>
 </section>
+
+
+
 
 
   <section class="gallery scroll-animate">
