modificado a secao sobre de cada ap

--- a/ap3.html
+++ b/ap3.html
@@ -37,46 +37,38 @@
 
 <section class="details scroll-animate">
   <div class="container">
-    <h2>Sobre o apartamento</h2>
-    <div class="quick-summary">
-      <ul class="summary-list">
-        <li>50m da praia 🏖️</li>
-        <li>Vista para a piscina 🏊</li>
-        <li>Até 8 pessoas 👨‍👩‍👧‍👦</li>
-        <li>Sacada gourmet 🍖</li>
-      </ul>
-    </div>
-
-    <div class="details-grid">
-      <div class="details-block">
-        <h3>Estrutura do condomínio</h3>
-        <ul class="condo-list">
-          <li>Piscina adulto e infantil</li>
-          <li>Salão de jogos</li>
-          <li>Área verde preservada</li>
-        </ul>
-      </div>
-      <div class="details-block">
-        <h3>Detalhes do apartamento</h3>
-        <ul class="apartment-list">
-          <li>2 dormitórios: 1 cama de casal + 2 colchões / 2 camas de solteiro + 2 colchões</li>
-          <li>Sala de jantar e sala de estar</li>
-          <li>Cozinha planejada e equipada</li>
-          <li>Sacada gourmet com churrasqueira, rede de proteção e ambiente tranquilo</li>
-          <li>Contato com a natureza e canto dos pássaros</li>
-        </ul>
-      </div>
-      <div class="details-block">
-        <h3>Informações úteis</h3>
-        <ul class="info-list">
-          <li>2º andar com elevador e escadas</li>
-          <li>1 vaga coberta na garagem</li>
-          <li>Não são permitidos pets</li>
-        </ul>
+    <div class="badge-block">
+      <h3>🏠 Sobre o apartamento</h3>
+      <div class="badges">
+        <span class="badge">2 dormitórios 🛏️</span>
+        <span class="badge">Sala de jantar e sala de estar 🍽️🛋️</span>
+        <span class="badge">Cozinha equipada 🧑‍🍳</span>
+        <span class="badge">Sacada gourmet com rede 🍖</span>
+        <span class="badge">Até 8 pessoas 👨‍👩‍👧‍👦</span>
+        <span class="badge destaque">Vista para a piscina 🏊‍♂️</span>
       </div>
     </div>
 
-    <p><em>* Possuímos mais um apartamento no mesmo prédio para grupos maiores.</em></p>
+    <div class="badge-block">
+      <h3>🏢 Sobre o condomínio</h3>
+      <div class="badges">
+        <span class="badge">Piscina adulto e infantil 🏊‍♂️</span>
+        <span class="badge">Salão de jogos 🎯</span>
+        <span class="badge">Área verde preservada 🌿</span>
+        <span class="badge">50m da praia 🏖️</span>
+        <span class="badge destaque">Ambiente tranquilo para relaxar ☀️</span>
+      </div>
+    </div>
+
+    <div class="badge-block">
+      <h3>ℹ️ Informações úteis</h3>
+      <div class="badges">
+        <span class="badge">2º andar com elevador e escadas 🛗</span>
+        <span class="badge">1 vaga coberta 🚗</span>
+        <span class="badge">Não são permitidos pets 🚫🐾</span>
+        <span class="badge destaque">Mais um ap. no mesmo prédio 🏢</span>
+      </div>
+    </div>
   </div>
 </section>
 
