--- a/ap2.html
+++ b/ap2.html
@@ -37,49 +37,41 @@
 
 <section class="details scroll-animate">
   <div class="container">
-    <h2>Sobre o apartamento</h2>
-    <div class="quick-summary">
-      <ul class="summary-list">
-        <li>100m da praia 🏖️</li>
-        <li>Sacada gourmet 🍖</li>
-        <li>Até 8 pessoas 👨‍👩‍👧‍👦</li>
-        <li>Piscina e natureza ao redor 🌴</li>
-      </ul>
-    </div>
-
-    <div class="details-grid">
-      <div class="details-block">
-        <h3>Estrutura do condomínio</h3>
-        <ul class="condo-list">
-          <li>Piscina adulto e infantil</li>
-          <li>Salão de jogos</li>
-          <li>Natureza preservada ao fundo</li>
-        </ul>
-      </div>
-      <div class="details-block">
-        <h3>Detalhes do apartamento</h3>
-        <ul class="apartment-list">
-          <li>2 dormitórios: 1 cama de casal + auxiliar / 2 camas de solteiro + 3 colchões extras</li>
-          <li>Sala com sofá-cama e TV</li>
-          <li>Cozinha planejada completa</li>
-          <li>Sala de jantar com mesa ampla</li>
-          <li>Sacada gourmet com churrasqueira, fechada em blindex</li>
-          <li>Som do canto dos pássaros e muito contato com a natureza</li>
-        </ul>
-      </div>
-      <div class="details-block">
-        <h3>Informações úteis</h3>
-        <ul class="info-list">
-          <li>2º andar com elevador e escadas</li>
-          <li>1 vaga coberta na garagem</li>
-          <li>Não são permitidos pets</li>
-        </ul>
+    <div class="badge-block">
+      <h3>🏠 Sobre o apartamento</h3>
+      <div class="badges">
+        <span class="badge">2 dormitórios 🛏️</span>
+        <span class="badge">Sala com sofá-cama e TV 📺</span>
+        <span class="badge">Cozinha planejada completa 🍽️</span>
+        <span class="badge">Sacada gourmet com churrasqueira 🍖</span>
+        <span class="badge">Até 8 pessoas 👨‍👩‍👧‍👦</span>
+        <span class="badge destaque">Contato com a natureza 🌿</span>
       </div>
     </div>
 
-    <p><em>* Possuímos mais um apartamento no mesmo prédio para grupos maiores.</em></p>
+    <div class="badge-block">
+      <h3>🏢 Sobre o condomínio</h3>
+      <div class="badges">
+        <span class="badge">Piscina adulto e infantil 🏊‍♂️</span>
+        <span class="badge">Salão de jogos 🎮</span>
+        <span class="badge">Natureza preservada ao fundo 🌴</span>
+        <span class="badge">100m da praia 🏖️</span>
+        <span class="badge destaque">Ambiente familiar e tranquilo ☀️</span>
+      </div>
+    </div>
+
+    <div class="badge-block">
+      <h3>ℹ️ Informações úteis</h3>
+      <div class="badges">
+        <span class="badge">2º andar com elevador e escadas 🛗</span>
+        <span class="badge">1 vaga coberta 🚗</span>
+        <span class="badge">Não são permitidos pets 🚫🐶</span>
+        <span class="badge destaque">Mais um ap. no mesmo prédio 🏢</span>
+      </div>
+    </div>
   </div>
 </section>
+
 
 
   <section class="gallery scroll-animate">
