--- a/ap4.html
+++ b/ap4.html
@@ -37,48 +37,29 @@
 
 <section class="details scroll-animate">
   <div class="container">
-    <h2>Sobre o apartamento</h2>
-    <div class="quick-summary">
-     <!-- <ul class="summary-list">
-        <li>50m da praia 🏖️</li>
-        <li>Vista para a piscina 🏊</li>
-        <li>Até 8 pessoas 👨‍👩‍👧‍👦</li>
-        <li>Sacada gourmet 🍖</li>
-      </ul> -->
-    </div>
-
-    <div class="details-grid">
-      <div class="details-block">
-        <h3>Estrutura do condomínio</h3>
-        <ul class="condo-list">
-          <!-- <li>Piscina adulto e infantil</li>
-          <li>Salão de jogos</li>
-          <li>Área verde preservada</li> 
-        </ul> -->
-      </div>
-      <div class="details-block">
-        <h3>Detalhes do apartamento</h3>
-        <ul class="apartment-list">
-        <!--  <li>2 dormitórios: 1 cama de casal + 2 colchões / 2 camas de solteiro + 2 colchões</li>
-          <li>Sala de jantar e sala de estar</li>
-          <li>Cozinha planejada e equipada</li>
-          <li>Sacada gourmet com churrasqueira, rede de proteção e ambiente tranquilo</li>
-          <li>Contato com a natureza e canto dos pássaros</li> 
-        </ul> -->
-      </div>
-      <div class="details-block">
-        <h3>Informações úteis</h3>
-       <!-- <ul class="info-list">
-          <li>2º andar com elevador e escadas</li>
-          <li>1 vaga coberta na garagem</li>
-          <li>Não são permitidos pets</li>
-        </ul> -->
+    <div class="badge-block">
+      <h3>🏠 Sobre o apartamento</h3>
+      <div class="badges">
+        <span class="badge">Apartamento confortável 🛏️</span>
+        <span class="badge">Ambiente familiar 👨‍👩‍👧‍👦</span>
+        <span class="badge">Sacada com vista para os montes e o mar 🌄🌊</span>
+        <span class="badge">Área gourmet integrada 🍽️</span>
+        <span class="badge">150 metros da Praia Grande 🏖️</span>
+        <span class="badge destaque">Sua melhor estadia em Ubatuba ✨</span>
       </div>
     </div>
 
+    <div class="badge-block">
+      <h3>🏢 Sobre o condomínio</h3>
+      <div class="badges">
+        <span class="badge">Piscina adulto e infantil 🏊‍♂️</span>
+        <span class="badge">Área de lazer com jardim 🌿</span>
+        <span class="badge">Espaço gourmet com vista 🍖</span>
+        <span class="badge destaque">Ideal para você e sua família 🏡</span>
+      </div>
+    </div>
   </div>
 </section>
-
 
   <section class="gallery scroll-animate">
     <div class="container">
