modificado mensagens do whatsapp

--- a/CACobertura.html
+++ b/CACobertura.html
@@ -14,7 +14,7 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
-<body data-pasta="assets/img/cacobertura" data-prefixo="cacobertura" data-total="15" data-whatsapp-msg="Oi! Gostei do apartamento no Grand Beach com vista para a mata e sacada gourmet. Ele está disponível nas datas [xx/xx - xx/xx]?">
+<body data-pasta="assets/img/cacobertura" data-prefixo="cacobertura" data-total="15" data-whatsapp-msg="Olá! Vi a cobertura no Costa Atlântica e gostaria de saber se está disponível para o período [xx/xx - xx/xx]. Pode me passar os detalhes?">
   <div id="header"></div>
 
   <section class="hero scroll-animate">
