--- a/GBPiscina.html
+++ b/GBPiscina.html
@@ -14,7 +14,7 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
-<body data-pasta="assets/img/gbpis" data-prefixo="gbpis" data-total="10" data-whatsapp-msg="Olá! Tenho interesse no apartamento com vista para a piscina no Grand Beach. Ele está disponível entre [xx/xx - xx/xx]? Pode me enviar as informações?">
+<body data-pasta="assets/img/gbpis" data-prefixo="gbpis" data-total="10" data-whatsapp-msg="Oi! Gostei do apartamento com vista para a piscina no Grand Beach. Pode confirmar se está livre para as datas [xx/xx - xx/xx]?">
   <div id="header"></div>
 
   <section class="hero scroll-animate">
