--- a/Riviera.html
+++ b/Riviera.html
@@ -14,7 +14,7 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
-<body data-pasta="assets/img/riviera" data-prefixo="riviera" data-total="16" data-whatsapp-msg="Olá! Tenho interesse no apartamento com vista para a piscina no Grand Beach. Ele está disponível entre [xx/xx - xx/xx]? Pode me enviar as informações?">
+<body data-pasta="assets/img/riviera" data-prefixo="riviera" data-total="16" data-whatsapp-msg="Olá! Estou vendo o apartamento no Riviera de Ubatuba e queria saber se ele está disponível nas datas [xx/xx - xx/xx].">
   <div id="header"></div>
 
   <section class="hero scroll-animate">
