--- a/GBCobertura.html
+++ b/GBCobertura.html
@@ -14,7 +14,7 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
-<body data-pasta="assets/img/gbcobertura" data-prefixo="gbcobertura" data-total="19" data-whatsapp-msg="Oi! Gostei do apartamento no Grand Beach com vista para a mata e sacada gourmet. Ele está disponível nas datas [xx/xx - xx/xx]?">
+<body data-pasta="assets/img/gbcobertura" data-prefixo="gbcobertura" data-total="19" data-whatsapp-msg="Olá! Gostei muito da cobertura duplex no Grand Beach. Poderia me informar se está disponível entre [xx/xx - xx/xx]?">
   <div id="header"></div>
 
   <section class="hero scroll-animate">
