--- a/GBMata.html
+++ b/GBMata.html
@@ -14,7 +14,7 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
-<body data-pasta="assets/img/gbmata" data-prefixo="gbmata" data-total="11" data-whatsapp-msg="Oi! Gostei do apartamento no Grand Beach com vista para a mata e sacada gourmet. Ele está disponível nas datas [xx/xx - xx/xx]?">
+<body data-pasta="assets/img/gbmata" data-prefixo="gbmata" data-total="11" data-whatsapp-msg="Olá! Me interessei pelo apartamento no Grand Beach com vista para a mata. Ele está disponível para os dias [xx/xx - xx/xx]?">
   <div id="header"></div>
 
   <section class="hero scroll-animate">
