--- a/GBPiscina.html
+++ b/GBPiscina.html
@@ -84,7 +84,10 @@
   <section class="map scroll-animate">
     <div class="container">
       <h2>Localização</h2>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d449.06098195387784!2d-45.06935289752858!3d-23.472434602076692!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cd53e48ffe8bf1%3A0x1fb1de5d5529b4b!2sCondom%C3%ADnio%20Grand%20Beach!5e0!3m2!1spt-BR!2sbr!4v1750013380063!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2085.653667386424!2d-45.070356618588825!3d-23.472692486101423!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cd53e48ffe8bf1%3A0x1fb1de5d5529b4b!2sCondom%C3%ADnio%20Grand%20Beach!5e1!3m2!1spt-BR!2sbr!4v1750516663481!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
     </div>
   </section>
 
