--- a/Riviera.html
+++ b/Riviera.html
@@ -72,7 +72,11 @@
   <section class="map scroll-animate">
     <div class="container">
       <h2>Localização</h2>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3659.654265455386!2d-45.0699654!3d-23.472932399999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cd521a9baa45b9%3A0x1150cb29cf058c98!2sCondom%C3%ADnio%20Riviera%20de%20Ubatuba!5e0!3m2!1spt-BR!2sbr!4v1750434411405!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1659.8984946507987!2d-45.07059891377696!3d-23.472885790862286!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cd521a9baa45b9%3A0x1150cb29cf058c98!2sCondom%C3%ADnio%20Riviera%20de%20Ubatuba!5e1!3m2!1spt-BR!2sbr!4v1750517082399!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>    
+    
+    
     </div>
   </section>
 
